--- a/michaelbayo.uk/.gitignore
+++ b/michaelbayo.uk/.gitignore
@@ -4,7 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-../server.js
 
 # testing
 /coverage
@@ -18,6 +17,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
+server.js
 
 npm-debug.log*
 yarn-debug.log*
