--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "loaders.css": "^0.1.2",
     "react-leaflet": "^4.2.0",
     "react-loaders": "^3.0.1",
+    "react-pdf": "^6.2.2",
     "react-router-dom": "^6.8.1",
     "sass": "^1.58.2"
   }
